methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:11: error: identifier expected but 'return' found.
  return false
  ^